[MSG2-10] Correcting receivers alignment

--- a/modules/_mailbox.scss
+++ b/modules/_mailbox.scss
@@ -177,6 +177,18 @@ article.mail, article.write-mail {
 
 
 
+article.write-mail {
+    .receivers, .subject {
+        label.two {
+            margin-top: 20px;
+        }
+    }
+    .subject input {
+        min-height: 40px;
+    }
+}
+
+
 
 @media screen and (max-width: $tablette) {
     body {
